<resources>
    <string name="app_name">App_android_004</string>

    <string name="textview_text_title">Mantenimiento: Contactos</string>

    <string name="edittext_hint_code">Ingrese el código</string>
    <string name="edittext_hint_name">Ingrese el Nombre</string>
    <string name="edittext_hint_lastname">Ingrese el Apellido</string>
    <string name="edittext_hint_phone">Ingrese el Telefono</string>
    <string name="edittext_hint_email">Ingrese el Correo</string>

    <string name="button_text_insert">Insertar</string>
    <string name="button_text_search">Buscar</string>
    <string name="button_text_delete">Eliminar</string>
    <string name="button_text_update">Modificar</string>




</resources>