<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textview_text_title"
        android:textAlignment="center"
        android:textColor="@color/design_default_color_secondary_variant"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editTextCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/edittext_hint_code"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColorHint="#8D6E63"
        android:autofillHints=""
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/edittext_hint_name"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#8D6E63"
        android:autofillHints=""
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/editTextLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/edittext_hint_lastname"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#8D6E63"
        android:autofillHints=""
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/edittext_hint_phone"
        android:inputType="phone"
        android:minHeight="48dp"
        android:textColorHint="#8D6E63"
        android:autofillHints=""
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/edittext_hint_email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColorHint="#8D6E63"
        android:autofillHints=""
        tools:ignore="VisualLintTextFieldSize" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClickButtonInsert"
        android:text="@string/button_text_insert"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/buttonSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClickButtonSearch"
        android:text="@string/button_text_search"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/buttonDelete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClickButtonDelete"
        android:text="@string/button_text_delete"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/buttonUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClickButtonUpdate"
        android:text="@string/button_text_update"
        tools:ignore="VisualLintButtonSize" />

</LinearLayout>